see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Jul-2013 Mark Dexter
 # Fix problem with failing system tests.

16-Jul-2013 Mark Dexter
 + Add webdriver tests for some components and extensions. Thanks Puneet Kala.

07-Jul-2013 Mark Dexter
 # Refactor delete method in webdriver tests
 # Fix failing system tests due to markup changes.

20-Jun-2013 Mark Dexter
 # Fix Webdriver tests for Google Chrome, markup changes.

15-Jun-2013 Mark Dexter
 # Fix failing system test.

11-Jun-2013 Mark Dexter
 # Fix problems with system tests from changes in HTML markup.

02-Jun-2013 Michael Babker
 + Port Feed, Filesystem, Filter, and Form package unit tests from Platform
 + Port Github package unit tests from Platform
 + Port Google and Grid package unit tests from Platform
 + Port Image, Keychain, and Language package unit tests from Platform
 + Port Mail, Mediawiki, Model, and Object package unit tests from Platform
 + Port Plugin, Profiler, Registry, String, and Twitter package unit tests from Platform
 + Port User, Utilities, and View package unit tests from Platform
 ^ Refactor unit tests to use CSV datasets
 + Port legacy tree unit tests from Platform

01-Jun-2013 Michael Babker
 + Port Database package unit tests from Platform
 + Port URI package unit tests from Platform
 + Port Facebook package unit tests from Platform
 + Port Linkedin, Oauth1, OAuth2, and Openstreetmap package unit tests from Platform
 + Port Access and Application package unit tests from Platform
 + Port Archive, Base, Cache, Client, Controller, and Crypt package unit tests from Platform